# duh

./: .gitignore  CMakeLists.txt  README.md  main.cpp  memoryFiltered.txt
catch/: streq.h
compat/: SerialPort.cpp  SerialPort.h  compat.h
include/: config.h  curspriv.h
local_box/: DuhPortExSwitch.cpp  DuhPortExSwitch.h  local_box.ino
src/: DuhInput.cpp  DuhInput.h  DuhRead.cpp  DuhRead.h  DuhSwitch.cpp  DuhSwitch.h  Makefile  checksum.cpp  checksum.h  consts.h  local_utils.cpp  local_utils.h  main.cpp  utils.cpp  utils.h
terminal/: DuhSwitch.cpp  DuhSwitch.h  GuiManager.cpp  GuiManager.h  LocalInput.h  LocalSwitch.cpp  LocalSwitch.h  testHarness.cpp  testHarness.h
tests/: e2eTests.cpp  readTests.cpp  testUtils.h  writeTests.cpp
